// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> renders correctly 1`] = `
<span
  className="Shorty-Text Shorty-Text--primary"
>
  Lorem ipsum
</span>
`;

exports[`<Text className="foo-bar" /> renders correctly 1`] = `
<span
  className="Shorty-Text Shorty-Text--primary foo-bar"
>
  Lorem ipsum
</span>
`;

exports[`<Text primary /> renders correctly 1`] = `
<span
  className="Shorty-Text Shorty-Text--primary"
>
  Lorem ipsum
</span>
`;

exports[`<Text secondary /> renders correctly 1`] = `
<span
  className="Shorty-Text Shorty-Text--secondary"
>
  Lorem ipsum
</span>
`;

exports[`<Text title="foo-bar" disabled /> renders correctly 1`] = `
<span
  className="Shorty-Text Shorty-Text--primary"
  disabled={true}
  title="foo-bar"
>
  Lorem ipsum
</span>
`;

exports[`<Text unimportant /> renders correctly 1`] = `
<span
  className="Shorty-Text Shorty-Text--unimportant"
>
  Lorem ipsum
</span>
`;
